--- a/Scss/layout/_reviews.scss
+++ b/Scss/layout/_reviews.scss
@@ -2,3 +2,6 @@
 @use "../variables" as *;
 
 // Reviews section styles goes here
+.reviews {
+  background-color: $primary-bg-color;
+}
